# TestManagedCpp

./: .gitignore  CMakeLists.txt  README.md
src/: testmanagedcpp.cpp  testmanagedcpp.cu  testmanagedcpp.hpp
